Делает правки по Pixel Perfect

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     type="search"
                     name="text"
                     id="search-field"
-                    placeholder="Поиск по сайту"
+                    placeholder="Текст поиска"
                   />
                   <label for="search-field" class="search-label"></label
                   ><button class="search-button" value="Найти">
@@ -290,7 +290,7 @@
             </div>
             <div class="advantage-container">
               <h2 class="title advantage-title">
-                Порхает как бабочка, жалит, как пчела
+                Порхает как бабочка, жалит как пчела!
               </h2>
               <p class="advantage-description">
                 Этот обычный, на первый взгляд, квадрокоптер оснащен мощным
@@ -305,9 +305,9 @@
                           class="slider-current-icon"
                           aria-hidden="true"
                           focusable="false"
-                          width="12"
-                          height="12"
-                          viewBox="0 0 12 12"
+                          width="10"
+                          height="10"
+                          viewBox="0 0 10 10"
                           fill="none"
                           xmlns="http://www.w3.org/2000/svg"
                         >
@@ -329,8 +329,9 @@
                           class="slider-current-icon"
                           aria-hidden="true"
                           focusable="false"
-                          width="12"
-                          height="12"
+                          width="10"
+                          height="10"
+                          viewBox="0 0 10 10"
                           fill="none"
                           xmlns="http://www.w3.org/2000/svg"
                         >
@@ -345,8 +346,9 @@
                           class="slider-current-icon"
                           aria-hidden="true"
                           focusable="false"
-                          width="12"
-                          height="12"
+                          width="10"
+                          height="10"
+                          viewBox="0 0 10 10"
                           fill="none"
                           xmlns="http://www.w3.org/2000/svg"
                         >
@@ -671,7 +673,7 @@
                     fill="#363636"
                   />
                 </svg>
-                Моноподы для селфи
+                Моноподы <br> для селфи
               </a>
             </li>
             <li class="product-item">
@@ -719,7 +721,7 @@
                     fill="#363636"
                   />
                 </svg>
-                Фитнес браслеты
+                Фитнес-браслеты
               </a>
             </li>
             <li class="product-item">
@@ -902,7 +904,7 @@
             </h2>
             <p class="newsletter-description">
               Еженедельный дайджест с обзорами новинок,<br />
-              длительными тест-драйвами, распаковками, а также акции,<br />
+              длительными тест-драйвами, распаковками, а также акции, <br>
               спецпредложения и вот это вот всё.
             </p>
           </div>
@@ -944,7 +946,7 @@
             <h3 class="visually-hidden">Адрес.</h3>
             <address class="contacts-footer">
               <p class="contacts-address-text">
-                Санкт-Петербург, набережная реки Карповки, 5, литера П.
+                Санкт-Петербург, набережная реки Карповки, <br> 5, литера П.
               </p>
             </address>
             <h3 class="visually-hidden">Услуги.</h3>
@@ -961,7 +963,7 @@
             </ul>
             <h3 class="visually-hidden">Номер телефона.</h3>
             <a class="contacts-phone-footer" href="tel:+78128121212"
-              >Тел.:+7 (812) 812-12-12</a
+              >Тел.: +7 (812) 812-12-12</a
             >
           </div>
         </section>
